--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Welcome |  KPM Plumbing and Heating LTD</title>
-    <meta name="description" content=" KPM Plumbing and Heating LTD" />
+    <title>KPM Plumbing & Heating | Expert Plumbing Services in Burnaby, BC</title>
+    <meta name="description" content="Professional plumbing and heating services in Burnaby, BC. Expert technicians for emergency repairs, installations, and maintenance. 24/7 service available. Licensed and insured." />
+    <meta name="keywords" content="plumbing services, heating services, emergency plumber, Burnaby plumber, boiler repair, drain cleaning, water heater installation, sewer services, camera inspection" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="KPM Plumbing and Heating LTD" />
+    <meta property="og:title" content="KPM Plumbing & Heating | Expert Plumbing Services in Burnaby, BC" />
+    <meta property="og:description" content="Professional plumbing and heating services in Burnaby, BC. Expert technicians for emergency repairs, installations, and maintenance. 24/7 service available." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kpmplumbing.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/logo.png" />
 
     <link
       rel="shortcut icon"
