--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>KPM Plumbing & Heating | Expert Plumbing Services in Burnaby, BC</title>
-    <meta name="description" content="Professional plumbing and heating services in Burnaby, BC. Expert technicians for emergency repairs, installations, and maintenance. 24/7 service available. Licensed and insured." />
-    <meta name="keywords" content="plumbing services, heating services, emergency plumber, Burnaby plumber, boiler repair, drain cleaning, water heater installation, sewer services, camera inspection" />
+    <title>KPM Plumbing & Heating | Expert Plumbing Services in Metro Vancouver, BC</title>
+    <meta name="description" content="Professional plumbing and heating services in Metro Vancouver. Expert technicians available 24/7 for repairs, installations and maintenance." />
+    <meta name="keywords" content="plumbing services, heating services, emergency plumber, Burnaby plumber, Vancouver plumber, Surrey plumber, Richmond plumber, Burnaby heating, Vancouver heating, Surrey heating, Richmond heating, boiler repair, drain cleaning, water heater installation, sewer services, camera inspection" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="KPM Plumbing and Heating LTD" />
-    <meta property="og:title" content="KPM Plumbing & Heating | Expert Plumbing Services in Burnaby, BC" />
-    <meta property="og:description" content="Professional plumbing and heating services in Burnaby, BC. Expert technicians for emergency repairs, installations, and maintenance. 24/7 service available." />
+    <meta property="og:title" content="KPM Plumbing & Heating | Expert Plumbing Services in Metro Vancouver, BC" />
+    <meta property="og:description" content="Professional plumbing and heating services in Metro Vancouver. Expert technicians available 24/7 for repairs, installations and maintenance." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kpmplumbing.com" />
     <meta property="og:image" content="%PUBLIC_URL%/img/logo.png" />
+    <link rel="canonical" href="https://kpmplumbingandheating.com/" />
+    <meta name="publisher" content="Orandbt" />
+    <link rel="publisher" href="https://orandbt.com" />
+
+
 
     <link
       rel="shortcut icon"
